feat(modules): get modules from course endpoint
