# docs/swagger.yaml
@@ -246,6 +246,9 @@ definitions:
         example: Effective Eureka is a course about effective eureka.
         maxLength: 255
         type: string
+      published:
+        example: true
+        type: boolean
       thumbnail:
         example: https://example.com/thumbnail.png
         type: string
@@ -506,6 +509,47 @@ paths:
       security:
       - access_token: []
       summary: Module creation
+      tags:
+      - modules
+  /course/{courseID}/modules:
+    get:
+      consumes:
+      - application/json
+      description: Get all modules from a course
+      parameters:
+      - description: Course ID
+        in: path
+        name: courseID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.HttpModuleOk'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.HttpBadRequestErr'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httputil.HttpMissingAuthenticationErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HttpNotFoundErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HttpInternalServerErr'
+      security:
+      - access_token: []
+      summary: Module retrieval
       tags:
       - modules
   /module/{moduleID}:
